--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ django-storages==1.10.1
 djangorestframework==3.11.1
 hashids==1.3.1
 jmespath==0.10.0
+Pillow==7.2.0
+psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2020.1
 s3transfer==0.3.3
