--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,9 +2,17 @@ name: Django CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+        - master
+        
+        # Deployment branch
+        - dep  
   pull_request:
-    branches: [ master ]
+    branches: 
+        - master
+        
+        # Deployment branch
+        - dep
 
 jobs:
   build:
