--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,7 +3,11 @@ name: Django CI
 on:
   push:
     branches:
+        - master
+        
+        # Deployment branch
         - dep
+        
   pull_request:
     branches: 
         - master
