--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,11 +8,8 @@ on:
         # Deployment branch
         - dep
   pull_request:
-    branches: 
-        - master
+    branches: []
         
-        # Deployment branch
-        - dep
 
 jobs:
   build:
