--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -9,12 +9,8 @@ on:
         - dep
         
   pull_request:
-    branches: 
-        - master
+    branches: []
         
-        # Deployment branch
-        - dep
-
 jobs:
   build:
 
