docker login added.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Image CI (build and push to dockerhub)
 
 on:
   push:
@@ -14,5 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: docker login
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}  
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
+      
+      run: | 
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+          
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ragade:$(date +%s)
