--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: docker login
-      env:
-        DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}  
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
-      
-      run: | 
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-          
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ragade:$(date +%s)
+    - 
+      name: docker login
+      uses: docker/login-action@v1
+      with: 
+       username: ${{ secrets.DOCKER_USERNAME }}
+       password: ${{ secrets.DOCKET_PASSWORD }}
+    - 
+      name: Build the Docker image
+      uses: actions/checkout@v2             
+        run:|
+        docker build . --file Dockerfile --tag ragade:$(date +%s)
