--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,16 +11,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
-    - 
-      name: docker login
-      uses: docker/login-action@v1
-      with: 
-       username: ${{ secrets.DOCKER_USERNAME }}
-       password: ${{ secrets.DOCKET_PASSWORD }}
-    - 
-      name: Build the Docker image
-      uses: actions/checkout@v2             
-        run:|
-        docker build . --file Dockerfile --tag ragade:$(date +%s)
+    - uses: actions/checkout@v2
+    - name: docker login
+      env:
+        DOCKER_USER: ${{ secrets.DOCKERHUB_USERNAME }}  
+        DOCKER_TOKEN: ${{ secrets.DOCKERHUB_PASSWORD }}
+      run: |
+        docker login -u $DOCKER_USER -p $DOCKER_TOKEN
+    - name: docker build
+      run: docker build . --file Dockerfile --tag raghavgade/enhancements:$(date +%s)
+    - name: docker push
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/enhancements
